# fun-bots

./: .gitignore  .vummignore  MapList.txt  README.md  SECURITY.md  Supported-maps.md  Todos.txt  UI-Options.txt  build_language.yml  changelog.md  coding_guidlines(RM).md  compileUi.bat  convert_objectives.py  create_Maplist.py  create_settings.py  fix_link_and_vehicles.py  fun-bots-helper.bat  fun-bots-helper.cmd  fun-bots.vua.code-workspace  mod.db  mod.json  notes.txt  project.code-workspace  readme.md  remove_air-paths.py  remove_invalid-links.py  traces.md  ui.vuic
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
dev/fun-bots-helper/: azure.tcl  create_exe_file.bat  fun-bot-helper.py  fun-bots-helper.py  pyproject.toml  setup.py
dev/fun-bots-helper/addons/: gets.py  retrieves.py  root.py  sets.py
dev/fun-bots-helper/tests/: conftest.py  test_clear_all_paths.py  test_clear_settings.py  test_create_defaults.py  test_create_maplist.py  test_create_settings.py
dev/fun-bots-helper/theme/: azure.tcl  dark.tcl
dev/fun-bots-helper/tools/: clear_all_paths.py  clear_settings.py  create_Settings.py  create_defaults.py  create_language.py  create_maplist.py  create_settings.py  create_translations.py  export_permission_and_config.py  export_traces.py  go_back_to_root.py  import_permission_and_config.py  import_traces.py  merge_two_mapfiles.py  scan_for_invalid_comments.py  scan_for_invalid_nodes.py  scan_for_invalid_objectives.py  update_all_languages.py  update_supported_maps.py
dev/fun-bots-helper/tools/addons/: gets.py
ext/Shared/Languages/auto_translate/: auto_translate.py  pyproject.toml
fun-bots-helper/: .pre-commit-config.yaml  CompileUI.bat  CreateHelperExe.bat  Makefile  fun-bots-helper.bat  pyproject.toml
fun-bots-helper/src/: fun-bots-helper.py
fun-bots-helper/src/tools/: clear_all_paths.py  clear_settings.py  create_defaults.py  create_language.py  create_maplist.py  create_settings.py  export_permission_and_config.py  export_traces.py  fix_comments.py  fix_link_and_vehicles.py  fix_nodes.py  fix_objectives.py  import_permission_and_config.py  import_traces.py  merge_two_mapfiles.py  nade_distances.py  scan_for_invalid_comments.py  scan_for_invalid_nodes.py  scan_for_invalid_objectives.py  update_all_languages.py  update_supported_maps.py
fun-bots-helper/src/tools/addons/: gets.py  sets.py
fun-bots-helper/templates/: Supported-maps.md
fun-bots-helper/tests/: conftest.py  test_clear_all_paths.py  test_clear_settings.py  test_create_defaults.py  test_create_maplist.py  test_create_settings.py  test_fix_nodes.py  test_fix_objectives.py
(+620 files in other folders)
