[tool.poetry]
name = "fun-bots-helper"
version = "0.1.0"
description = "All packages needed to run and develop fun-bots helper"
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
deep-translator = "^1.9.0"
loguru = "^0.6.0"
customtkinter = "^4.6.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
autoflake = "^1.7.3"
pyinstaller = "^5.5"
pytest = "^7.1.3"
pydocstyle = "^6.1.1"
prospector = "^1.7.7"
types-requests = "^2.28.11.4"
pre-commit = "^2.20.0"
deptry = "^0.6.6"
tools = "^0.1.9"
darkdetect = "^0.7.1"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
