[tool.poetry]
name = "fun-bots-helper"
version = "0.1.0"
description = "All packages needed to run and develop fun-bots helper"
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]
readme = "README.md"
packages = [{include = "fun_bots"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
deep-translator = "^1.9.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
autoflake = "^1.7.3"
pyinstaller = "^5.5"
pytest = "^7.1.3"
pydocstyle = "^6.1.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
