[tool.poetry]
name = "translate"
version = "0.1.0"
description = ""
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deep-translator = "^1.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
